fix spacing

--- a/client/src/pages/Blogs/PostsList.module.css
+++ b/client/src/pages/Blogs/PostsList.module.css
@@ -18,6 +18,7 @@
    min-width: 400px;
    color: #0b80ee;
    margin-bottom: 1rem;
+   
 }
  .link {
   display: flex;              /* flex container */
@@ -29,6 +30,7 @@
   border-bottom: 2px solid #241616;
   width: 100%;
   box-sizing: border-box;
+  gap: 1rem;
 
 }
 
